sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:5: error: illegal start of simple expression
  for (j<- 2 to taille)){
                       ^